genius trait typo fix

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -800,15 +800,15 @@
  # /
  # T2 normal traits
 	trait_tec_gene_genius_t1:0 "§YGenius§! (§GI§!)"
-	trait_tec_gene_genius_t1_desc:0 "§LThe intellect of this species is starting to become unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
+	trait_tec_gene_genius_t1_desc:0 "§LThe intellect of this species is starting to become unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only they can understand.§!"
 	trait_tec_gene_genius_t1_effect:0 "$mod_negative_leader_traits_species$: §G-1§!\n$mod_leaders_upkeep_mult$: §G-10%§!\nResources from £job_researcher£ Researchers: §G+20%§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 	trait_tec_gene_genius_t2:0 "§YGenius§! (§YII§!)"
-	trait_tec_gene_genius_t2_desc:0 "§LThe intellect of this species is becoming unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
+	trait_tec_gene_genius_t2_desc:0 "§LThe intellect of this species is becoming unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only they can understand.§!"
 	trait_tec_gene_genius_t2_effect:0 "$mod_negative_leader_traits_species$: §G-1§!\n$mod_leaders_upkeep_mult$: §G-15%§!\nResources from £job_researcher£ Researchers: §G+25%§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 	trait_tec_gene_genius_t3:0 "§YGenius§! (§HIII§!)"
-	trait_tec_gene_genius_t3_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
+	trait_tec_gene_genius_t3_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only they can understand.§!"
 	trait_tec_gene_genius_t3_effect:0 "$mod_negative_leader_traits_species$: §G-2§!\n$mod_leaders_upkeep_mult$: §G-15%§!\nResources from £job_researcher£ Researchers: §G+30%§!\n§G$trait_tec_gene_perfected_scaling$§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 	# Unity
@@ -1035,7 +1035,7 @@
 		TRAIT_TEC_GENE_PERFECTION_EFFECT:0 "§YThis trait generates special leader traits for members of this species.\nLeaders are §YImmortal§!.§!"
 
 		trait_tec_gene_brain:0 "Genius"
-		trait_tec_gene_brain_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
+		trait_tec_gene_brain_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only they can understand.§!"
 		TRAIT_TEC_GENE_BRAIN_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! of this species.§!"
 
 		trait_tec_gene_fertile:0 "Fecund"
