fix(TTA-1252): idilic bloom fix, trully now rodah

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1320,6 +1320,8 @@ l_english:
 		building_gaiaseeders_2_desc:0 "$building_gaiaseeders_all_desc$\n\nThis phase shifts towards habitability and population maintenance."
 		building_gaiaseeders_3_desc:0 "$building_gaiaseeders_all_desc$\n\nThis phase emphasizes habitability and population maintenance."
 		building_gaiaseeders_4_desc:0 "$building_gaiaseeders_all_desc$"
+		building_gaiaseeders_4_gaia_only: "$building_gaiaseeders_4$"
+		building_gaiaseeders_4_gaia_only_desc: "$building_gaiaseeders_4_desc$"
 		building_gaiaseeders_4_effect_desc:0 "Terraforms the planet into a §YGaia World§! on completion."
 	# /
 	building_tec_gaiaseeders_gaia:0 "$building_gaiaseeders$ - Utopian Phase"
