--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -37,6 +37,16 @@
 
 	tec_loc_feature_not_ready:0 "§R£trigger_tec_warning_red£ Feature not ready§!"
 
+	# Deliverables
+	todo_ascension:0 ""
+	todo_new_ascension:0 ""
+	todo_new_civics:0 ""
+	todo_regular_civics:0 ""
+	todo_megacorp_civics:0 ""
+	todo_hive_civics:0 ""
+	todo_machine_civics:0 ""
+	todo_origin_civics:0 ""
+
 	tec_loc_energy:0 "$tec_loc_energy_icon$ Energy"
 	tec_loc_energy_icon:0 "£energy£"
 	tec_loc_minerals:0 "$tec_loc_minerals_icon$ Minerals"
