fix: implementation of centrality political power removed from standard to pop category defs, anglers swap on cg district for food

--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -420,7 +420,7 @@
 	tr_statecraft_inspiring_agendas_desc:1 "§YUnlocks Agenda:§! $council_agenda_agenda_rightful_claims_name$\n§YUnlocks Agenda:§! $council_agenda_agenda_oppose_the_fallen_name$"
 
 	tr_tec_centrality_1:0 "Core Authority"
-	tr_tec_centrality_1_tooltip:0 "$tec_loc_section_core_sector_and_administrated$\n$t$- $MOD_POP_POLITICAL_POWER$ from Living Standards: §G+50%§!\n\n$tec_loc_section_rim_sector$\n$t$- $MOD_POP_POLITICAL_POWER$ from Living Standards: §R-50%§!"
+	tr_tec_centrality_1_tooltip:0 "$tec_loc_section_core_sector_and_administrated$\n$t$- $MOD_POP_POLITICAL_POWER$: §G+50%§!\n\n$tec_loc_section_rim_sector$\n$t$- $MOD_POP_POLITICAL_POWER$: §R-50%§!"
 	tr_tec_centrality_1_delayed:0 "Power flows from the center, ensuring only the most vital regions shape our destiny. The core thrives, while the fringes follow."
 
 	tr_tec_centrality_1_aiauth:0 "$tr_tec_centrality_1$"
