feat: tech weights for ais and merc enclaves, mechanism for fixing empire ethics

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -87,8 +87,8 @@
 # /
 
 # Civic types
-	concept_tec_origin_replace_civic: "Origin Replace Civic"
-	concept_tec_origin_replace_civics: "Origin Replace Civics"
+	concept_tec_origin_replace_civic: "Origin Replacement Civic"
+	concept_tec_origin_replace_civics: "Origin Replacement Civics"
 	concept_tec_origin_replace_civic_desc: "Origin Replace civics are civics that allow adding an existing origin as civic for making builds more flexible. These civics disable other Origin Civics, as it's effectively having a second origin."
 
 	concept_tec_origin_civic: "Origin Civic"
