fix: hoarder tooltip and improvements

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -10,8 +10,8 @@
 # MISC replaces
 # ------------------------------------------------------------
 	CORPORATE_COUNTRY_MODIFIER:0 "£empire£§YBranch Office Owner§! §EEffects§!"
-	COUNTRY_MODIFIER:0 "§Y$tec_loc_planet$§! §EEffects§!"
-	PLANET_MODIFIER: "§Y$tec_loc_empire$§! §EEffects§!"
+	COUNTRY_MODIFIER:0 "§Y$tec_loc_empire$§! §EEffects§!"
+	PLANET_MODIFIER: "§Y$tec_loc_planet$§! §EEffects§!"
 	POP_MODIFIER: "§Y$tec_loc_pop$§! §EEffects§!"
 
 # GENERIC REPLACES
