disabled antidesyncs for testing this version

--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -1981,8 +1981,8 @@
 	tec_gene_path.20010.continue.hive.tooltip:0 "$tec_loc_situation_continues_normal$"
 
 	tec_gene_path.20020.name:0 "Our Genome, Deciphered"
-	tec_gene_path.20020.desc.regular:0 "This day will me marked in our historical records, as finally we hve been able to do a complete and detailed mapping of the genomic structure that consolidates the foundation of our genetic code.\n\nThe application of the new strains as markers guided all the process and has allowed us to fully extract and refine something ... better, something perfect, a clear way to further improve ourselves."
-	tec_gene_path.20020.desc.hive:0 "Our collective has achieved an incredible breakthrough and as so each single of our drones will remember this day, as finally we hve been able to do a complete and detailed mapping of the genomic structure that consolidates the foundation of our genetic code.\n\nThe application of the new strains as markers guided all the process and has allowed us to fully extract and refine something ... better, something perfect, a clear way to further improve ourselves."
+	tec_gene_path.20020.desc.regular:0 "This day will me marked in our historical records, as finally we have been able to do a complete and detailed mapping of the genomic structure that consolidates the foundation of our genetic code.\n\nThe application of the new strains as markers guided all the process and has allowed us to fully extract and refine something ... better, something perfect, a clear way to further improve ourselves."
+	tec_gene_path.20020.desc.hive:0 "Our collective has achieved an incredible breakthrough and as so each single of our drones will remember this day, as finally we have been able to do a complete and detailed mapping of the genomic structure that consolidates the foundation of our genetic code.\n\nThe application of the new strains as markers guided all the process and has allowed us to fully extract and refine something ... better, something perfect, a clear way to further improve ourselves."
 	tec_gene_path.20020.continue.regular:0 "So close to unlock our potential..."
 	tec_gene_path.20020.continue.regular.tooltip:0 "$tec_loc_situation_continues_normal$"
 	tec_gene_path.20020.continue.hive:0 "Our collective will evolve faster..."
@@ -4628,7 +4628,7 @@
 
 		# Events
 		OLD_tec_cybernetic_path.20011.name:0 "Improved Autoevolution"
-		OLD_tec_cybernetic_path.20011.desc:0 "Our test labs at [tec_target_planet.GetName] have been able to develop specific tools and enhancements which amplifies the production capacities of our kind; we hve allowed a test deployment of the planet, as they have passed the qualification tests."
+		OLD_tec_cybernetic_path.20011.desc:0 "Our test labs at [tec_target_planet.GetName] have been able to develop specific tools and enhancements which amplifies the production capacities of our kind; we have allowed a test deployment of the planet, as they have passed the qualification tests."
 		OLD_tec_cybernetic_path.20011.a:0 "This will serve us well."
 		OLD_tec_cybernetic_path.20011.a.tooltip:0 "The §YSituation Progress§! will be increased by §G5§!.\nCybernetic pops at [tec_target_planet.GetName] will produce a §G10%§! more during §Y1§! year."
 
