fix: some errors

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -454,35 +454,37 @@
 	concept_tec_perfect_planets: "Perfect Planets"
 	concept_tec_perfect_planet_desc: "Perfect planets are natural planetoids which usually give full habitability to the pops living on it. This usually refers to §YGaia Worlds§!.\n\nIf you have §YPlanetary Diversity§! sub-mods, this will include natural §YUnique Worlds§! and §YShroud Worlds§!"
 
-	concept_tec_ecoworld: "Ecoworld"
-	concept_tec_ecoworlds: "Ecoworlds"
-	concept_tec_ecoworld_desc: "Ecoworlds are planetary arcologies, these worlds maintain their §YPlanetary Deposits§! and §YPlanet Class§!.\n\nThe rural districts get replaced with an improved version, providing an extra £job£ §YJob§!, and that can be further improved with some more £decision£ §YDecisions§!, giving them extra §Y£job£ Specialist Jobs§!:\n - $tec_loc_minerals$ Districts provide £job_foundry£ Metallurgists\n- $tec_loc_food$ Districts provide £job_artisan£ Artisans\n- $tec_loc_energy$ Districts provide £job_researcher£ Researchers\n\nThe §YHousing Districts§! double their housing capacity and the §YIndustrial Districts§! are replaced with §Y$district_tec_eco_leisure$§!, providing ['concept_unity', £unity£ $concept_unity$] and £amenities£ §YAmenities Jobs§!.\n\nThey are created using the ['concept_tec_decision_tec_ecoworld_project_icon'] decision."
+	concept_tec_ecoworld: "$pm_tec_ecoworld_planet$"
+	concept_tec_ecoworlds: "$pm_tec_ecoworld_planet$s"
+	concept_tec_ecoworld_desc: "$pm_tec_ecoworld_planet$s are planetary arcologies, these worlds maintain their §YPlanetary Deposits§! and §YPlanet Class§!\n$t$- $tec_loc_pop_growth$: §G+15%§!\n$t$- $mod_planet_jobs_produces_mult$: §G+10%§!\n$t$- $MOD_PLANET_CARRY_CAP_ADD$: §G+50§!\n\n$decision_tec_ecoworld_project_districts_effects$\n\nThey are created using the ['concept_tec_decision_tec_ecoworld_project_icon'] §YDecision§!\n\n§L$pm_tec_ecoworld_planet_desc$§!"
 
 	concept_tec_decision_tec_ecoworld_project: "$decision_tec_ecoworld_project$"
-	concept_tec_decision_tec_ecoworld_project_icon: "£stability£ $concept_tec_decision_tec_ecoworld_project$"
-	concept_tec_decision_tec_ecoworld_project_desc: "$decision_tec_ecoworld_project_effects$"
+	concept_tec_decision_tec_ecoworld_project_icon: "£decision£ $concept_tec_decision_tec_ecoworld_project$"
+	concept_tec_decision_tec_ecoworld_project_desc: "$decision_tec_ecoworld_project_effects$\n\n§L$decision_tec_ecoworld_project_desc$§!"
 
 	concept_tec_ecumenopolis: "Ecumenopolis"
 	concept_tec_ecumenopoleis: "Ecumenopoleis"
-	concept_tec_ecumenopolis_desc: "Ecumenopolis are planetary arcologies, which had all their §YPlanetary Deposits§! stripped for the purpose of high density living and industry. It has access to £district£ §YArcology Districts§! and has boosted §Y$tec_loc_pop_growth$§!.\n\nEcumenopolis can be further specialized from their ['concept_tec_ecumenopolis_default', Default] variant into the following variants: ['concept_tec_ecumenopolis_military', Military], ['concept_tec_ecumenopolis_academic', Academic] or ['concept_tec_ecumenopolis_administrative', Administrative]\n\nAll Ecumenopolis have access to £housing£ §Y$district_arcology_housing$§! and £amenities£ §Y$district_arcology_leisure$§! (or £amenities_no_happiness£ §Y$district_tec_arcology_maintenance$§! for gestalts) districts.\n\nSpecialized Ecumenopolis have access to the £trade_value£ §Y$district_tec_arcology_trade$§! if the empire can produce §Y$tec_loc_trade_value$§!.\n\nSpiritualist Empires have access to a replacement of the £job_bureaucrat£ §Y$district_tec_arcology_administrative$§!, the £job_priest£ §Y$district_tec_arcology_faith$§!, which becomes available on all Ecumenopolis.\n\nRogue Servitor Empires replace both the £job_bureaucrat£ §Y$district_tec_arcology_administrative_gestalt$§! and the £amenities_no_happiness£ §Y$district_tec_arcology_maintenance$§! with the £job_bio_trophy£ §Y$district_arcology_organic_housing$§! which becomes available on all Ecumenopolis."
+	concept_tec_ecumenopolis_desc: "Ecumenopolis are planetary arcologies, which had all their §YPlanetary Deposits§! stripped for the purpose of high density living and industry.\n$t$- $mod_planet_jobs_produces_mult$: §G+20%§!\n$t$- $tec_loc_pop_growth$: §G+15%§!\n$t$- $tec_loc_robot_assembly$: §G+15%§!\n$t$- $tec_loc_organic_assembly$: §G+15%§!\n$t$- $tec_loc_building_slots$: §G+12§!\n$t$- $MOD_PLANET_RESETTLEMENT_UNEMPLOYED_DESTINATION_MULT$: §G+50%§!\n\n$decision_arcology_project_district_effects$\n\nEcumenopolis can be further specialized from their ['concept_tec_ecumenopolis_default', Default] Variant into the following variants:\n$t$- ['concept_tec_ecumenopolis_military', Military]\n$t$- ['concept_tec_ecumenopolis_academic', Academic]\n$t$- ['concept_tec_ecumenopolis_administrative', Administrative]\n\nThey are created using the ['concept_tec_decision_arcology_project_icon'] §YDecision§!\n\n§L$pc_city_desc$§!"
 
 	concept_tec_ecumenopolis_default: "Default Ecumenopolis"
-	concept_tec_ecumenopolis_default_desc: "Default Ecumenopolis has access to slightly weaker £job_foundry£ §Y$district_arcology_arms_industry$§! and £job_artisan£ §Y$district_arcology_civilian_industry$§! districts compared to specialized variants."
+	concept_tec_ecumenopolis_default_desc: "Default ['concept_tec_ecumenopolis'] has access to slightly weaker £job_foundry£ §Y$district_arcology_arms_industry$§! and £job_artisan£ §Y$district_arcology_civilian_industry$§! districts compared to §YSpecialized§! variants."
+
+
+	concept_tec_ecumenopolis_specialized_districts: "§YEmpire§! using §Y$tec_loc_trade_value$§! have extra §Y$tec_loc_districts$§!:\n$t$- ['district:district_tec_arcology_trade', £trade_value£ $district_tec_arcology_trade$]"
 
 	concept_tec_ecumenopolis_military: "Military Ecumenopolis"
-	concept_tec_ecumenopolis_military_desc: "Military Ecumenopolis has access to £job_foundry£ §Y$district_arcology_arms_industry$§! and £job_soldier£ §Y$district_tec_arcology_army$§! districts, the latter being able to be swapped to £job_tec_naval_operator£ §Y$district_tec_arcology_navy$§! district through a decision."
+	concept_tec_ecumenopolis_military_desc: "Military ['concept_tec_ecumenopolis'] replaces §Y$tec_loc_districts$§! with:\n$t$- ['district:district_tec_arcology_army', £job_soldier£ $district_tec_arcology_army$] (replaces ['district:district_arcology_civilian_industry', £job_artisan£ $district_arcology_civilian_industry$])\n\n$concept_tec_ecumenopolis_specialized_districts$\n\nFurther specializing replaces §Y$tec_loc_districts$§! with:\n$t$- ['district:district_tec_arcology_navy', £job_tec_naval_operator£ $district_tec_arcology_army$] (replaces ['district:district_tec_arcology_army', £job_soldier£ $district_tec_arcology_army$])"
 
 	concept_tec_ecumenopolis_academic: "Academic Ecumenopolis"
-	concept_tec_ecumenopolis_academic_desc: "Academic Ecumenopolis has access to £job_researcher£ §Y$district_tec_arcology_research$§! and £job_chemist£ §Y$district_tec_arcology_refinery$§! districts, the later being able to be specialized further to produce only $tec_loc_volatile_motes$, $tec_loc_exotic_gases$ or $tec_loc_rare_crystals$, but provides more jobs."
+	concept_tec_ecumenopolis_academic_desc: "Academic ['concept_tec_ecumenopolis'] replaces §Y$tec_loc_districts$§! with:\n$t$- ['district:district_tec_arcology_research', £job_researcher£ $district_tec_arcology_research$] (replaces ['district:district_arcology_arms_industry', £job_foundry£ $district_arcology_arms_industry$])\n$t$- ['district:district_tec_arcology_refinery', £job_gas_refiner£ $district_tec_arcology_refinery$] (replaces ['district:district_arcology_civilian_industry', £job_artisan£ $district_arcology_civilian_industry$])\n\n$concept_tec_ecumenopolis_specialized_districts$\n\nFurther specializing replaces §Y$tec_loc_districts$§! with (mutually exclusive):\n$t$- ['district:district_tec_arcology_crystals', £rare_crystals£ $district_tec_arcology_crystals$] (replaces ['district:district_tec_arcology_refinery', £job_gas_refiner£ $district_tec_arcology_refinery$])\n$t$- ['district:district_tec_arcology_gases', £exotic_gases£ $district_tec_arcology_gases$] (replaces ['district:district_tec_arcology_refinery', £job_gas_refiner£ $district_tec_arcology_refinery$])\n$t$- ['district:district_tec_arcology_motes', £volatile_motes£ $district_tec_arcology_motes$] (replaces ['district:district_tec_arcology_refinery', £job_gas_refiner£ $district_tec_arcology_refinery$])"
 
 	concept_tec_ecumenopolis_administrative: "Administrative Ecumenopolis"
-	concept_tec_ecumenopolis_administrative_desc: "Administrative Ecumenopolis has access to £job_artisan£ §Y$district_arcology_civilian_industry$§! and £job_bureaucrat£ §Y$district_tec_arcology_administrative$§! (or $district_tec_arcology_administrative_gestalt$ for gestalts) districts."
+	concept_tec_ecumenopolis_administrative_desc: "Administrative Ecumenopolis replaces §Y$tec_loc_districts$§! with:\n$t$- ['district:district_tec_arcology_administrative', £job_bureaucrat£ $district_tec_arcology_administrative$] (replaces ['district:district_arcology_arms_industry', £job_foundry£ $district_arcology_arms_industry$])\n$t$- ['district:district_tec_arcology_administrative_gestalt', £job_synapse_drone£ $district_tec_arcology_administrative_gestalt$] (replaces ['district:district_arcology_arms_industry', £job_foundry£ $district_arcology_arms_industry$] if §YGestalt§!)\n\n$concept_tec_ecumenopolis_specialized_districts$"
 
 # Decisions
-
 	concept_tec_decision_arcology_project: "$decision_arcology_project$"
-	concept_tec_decision_arcology_project_icon: "£decision£ $concept_tec_decision_arcology_project$"
-	concept_tec_decision_arcology_project_desc: "$decision_arcology_project_effects$"
+	concept_tec_decision_arcology_project_icon: "£decision£ $decision_arcology_project$"
+	concept_tec_decision_arcology_project_desc: "$decision_arcology_project_effects$\n\n§L$decision_arcology_project_desc$§!"
 
 	concept_tec_decision_tec_environment_engineers: "$decision_tec_environment_engineers$"
 	concept_tec_decision_tec_environment_engineers_icon: "£decision£ $decision_tec_environment_engineers$"
@@ -1858,21 +1860,27 @@
 # /
 
 	concept_tec_housing_district: "Housing District"
+	concept_tec_housing_districts: "Housing Districts"
 	concept_tec_housing_district_desc: "Housing Districts are districts which usually provide most of the housing on a planet. They also tend to give some jobs like ['concept_tec_worker_job_clerk_plural_icon'] or ['concept_tec_worker_job_maintenance_drone_plural_icon'].\n\nHousing Districts (Regular Planets):\n$t$- ['district:district_city']\n$t$- ['district:district_hive']\n$t$- ['district:district_tec_biohive_housing']\n$t$- ['district:district_nexus']\nHousing Districts (Special):\n$t$- ['district:district_crashed_slaver_ship']\n$t$- ['district:district_resort']\n$t$- ['district:district_tec_proto_city']\nHousing Districts (Habitats):\n$t$- ['district:district_hab_housing']\nHousing Districts (Arcologies):\n$t$- ['district:district_arcology_housing']\n$t$- ['district:district_tec_hab_arcology_housing']\n$t$- ['district:district_tec_eco_arcology']\n$t$- ['district:district_tec_elysium_arcology']\nHousing Districts (Ringworld):\n$t$- ['district:district_rw_city']\n$t$- ['district:district_rw_hive']\n$t$- ['district:district_rw_nexus']"
 
 	concept_tec_farming_district: "Farming District"
+	concept_tec_farming_districts: "Farming Districts"
 	concept_tec_farming_district_desc: "Farming Districts are districts which provide $tec_loc_food$ Jobs such as ['concept_tec_worker_job_farmer_plural_icon'] or ['concept_tec_worker_job_agri_drone_plural_icon'].\n\nFarming Districts (Regular Planets):\n$t$- ['district:district_farming']\n$t$- ['district:district_tec_biohive_farming']\n$t$- ['district:district_tec_aqua_farming']\nFarming Districts (Special):\n$t$- ['district:district_tec_proto_farming']\nFarming Districts (Habitats):\n$t$- ['district:district_tec_hab_food']\nFarming Districts (Arcologies):\n$t$- ['district:district_tec_eco_farming']\n$t$- ['district:district_tec_eco_aqua_farming']\n$t$- ['district:district_tec_elysium_food']\nFarming Districts (Ringworld):\n$t$- ['district:district_rw_farming']"
 
 	concept_tec_generator_district: "Generator District"
+	concept_tec_generator_districts: "Generator Districts"
 	concept_tec_generator_district_desc: "Generator Districts are districts which provide $tec_loc_energy$ Jobs such as ['concept_tec_worker_job_technician_plural_icon'] or ['concept_tec_worker_job_technician_drone_plural_icon'].\n\nGenerator Districts (Regular Planets):\n$t$- ['district:district_generator']\n$t$- ['district:district_tec_biohive_generator']\n$t$- ['district:district_tec_aqua_generator']\nGenerator Districts (Special):\n$t$- ['district:district_tec_proto_generator']\nGenerator Districts (Habitats):\n$t$- ['district:district_hab_energy']\nGenerator Districts (Arcologies):\n$t$- ['district:district_tec_eco_generator']\n$t$- ['district:district_tec_eco_aqua_generator']\n$t$- ['district:district_tec_elysium_generator']\nGenerator Districts (Ringworld):\n$t$- ['district:district_rw_generator']"
 
 	concept_tec_mining_district: "Mining District"
+	concept_tec_mining_districts: "Mining Districts"
 	concept_tec_mining_district_desc: "Mining Districts are districts which provide $tec_loc_minerals$ Jobs such as ['concept_tec_worker_job_miner_plural_icon'] or ['concept_tec_worker_job_mining_drone_plural_icon'].\n\nMining Districts (Regular Planets):\n$t$- ['district:district_mining']\n$t$- ['district:district_tec_biohive_mining']\n$t$- ['district:district_tec_aqua_mining']\nMining Districts (Special):\n$t$- ['district:district_tec_proto_mining']\nMining Districts (Habitats):\n$t$- ['district:district_hab_mining']\nHousing Districts (Arcologies):\n$t$- ['district:district_tec_eco_mining']\n$t$- ['district:district_tec_eco_aqua_mining']\nFarming Districts (Ringworld):\n$t$- ['district:district_tec_rw_replicator']"
 
 	concept_tec_industrial_district: "Industrial District"
+	concept_tec_industrial_districts: "Industrial Districts"
 	concept_tec_industrial_district_desc: "Industrial Districts are districts which provide $tec_loc_industrial_resources$ Jobs such as ['concept_tec_specialist_job_foundry_plural_icon'] or ['concept_tec_specialist_job_artisan_plural_icon'].\n\nIndustrial Districts (Regular Planets):\n$t$- ['district:district_industrial']\n$t$- ['district:district_tec_factory']\n$t$- ['district:district_tec_biohive_industrial']\n$t$- ['district:district_tec_biohive_factory']\nIndustrial Districts (Special):\n$t$- ['district:district_tec_proto_industrial']\n$t$- ['district:district_tec_proto_factory']\nIndustrial Districts (Habitats):\n$t$- ['district:district_hab_industrial']\n$t$- ['district:district_tec_hab_factory']\nIndustrial Districts (Arcologies):\n$t$- ['district:district_arcology_civilian_industry']\n$t$- ['district:district_arcology_arms_industry']\n$t$- ['district:district_tec_elysium_forge']\n$t$- ['district:district_tec_elysium_civil']\n$t$- ['district:district_tec_hab_arcology_foundry']\n$t$- ['district:district_tec_hab_arcology_industry']\nIndustrial Districts (Ringworld):\n$t$- ['district:district_tec_rw_forge']\n$t$- ['district:district_tec_rw_industry']"
 
 	concept_tec_menial_district: "Menial District"
+	concept_tec_menial_districts: "Menial Districts"
 	concept_tec_menial_district_desc: "- ['concept_tec_farming_district']\n- ['concept_tec_generator_district']\n- ['concept_tec_mining_district']"
 
 	# Ethics
