--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -159,7 +159,7 @@
 	tec_loc_designation: "£stability£ Designation"
 	tec_loc_planet_designation: "£stability£ Planet Designation"
 
-	tec_loc_planet_decision:0 "£planet£ Planetary Decision"
+	tec_loc_planet_decision:0 "£decision£ Planetary Decision"
 	tec_loc_planet_decisions:0 "$tec_loc_planet_decision$s"
 	tec_loc_planetary_decision:0 "$tec_loc_planet_decision$"
 
