feat: edicts for missing ethics, ordering edicts

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -400,7 +400,7 @@
 
 	TEC_TAG_MATERIALIST_BONUS_POLICY_TRADE: "$TEC_TAG_BONUS_POLICY$: Can use ['concept_tec_policy_option_trade_policy_innovation_alias_icon'] Policy Option"
 	TEC_TAG_MATERIALIST_BONUS_LIVING_STANDARD_ACADEMIC:0 "$TEC_TAG_BONUS_LIVING_STANDARD$ Can use ['concept_tec_living_standard_academic_privilege_alias_icon'] Living Standards"
-	TEC_TAG_MATERIALIST_BONUS_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_tec_technological_funding_alias_icon'] Edict"
+	# TEC_TAG_MATERIALIST_BONUS_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_tec_technological_funding_alias_icon'] Edict"
 	TEC_TAG_MATERIALIST_BONUS_MECHANIC:0 "$TEC_TAG_BONUS_MECHANIC$ Allows the selection of §YResearch Category§! focus via policy."
 	TEC_TAG_MATERIALIST_BONUS_MECHANIC_OLD:0 "$TEC_TAG_BONUS_MECHANIC$ Can build ['concept_tec_ethic_building_experimental_labs'] buildings"
 
