--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
 	# overwriting vanilla if origin/civic key contains brackets for compat civic/origins
 
-	TRIGGER_HAS_ORIGIN:2 "Has ['civic:$ORIGIN$'] Origin"
-	TRIGGER_NOT_HAS_ORIGIN:2 "Does NOT have ['civic:$ORIGIN$'] Origin"
-	TRIGGER_HAS_CIVIC:3 "Has ['civic:$CIVIC$'] Civic"
-	TRIGGER_NOT_HAS_CIVIC:3 "Does NOT have ['civic:$CIVIC$'] Civic"
+	TRIGGER_HAS_ORIGIN:2 "Has ['civic:$ORIGIN$'] Origin\n"
+	TRIGGER_NOT_HAS_ORIGIN:2 "Does NOT have ['civic:$ORIGIN$'] Origin\n"
+	TRIGGER_HAS_CIVIC:3 "Has ['civic:$CIVIC$'] Civic\n"
+	TRIGGER_NOT_HAS_CIVIC:3 "Does NOT have ['civic:$CIVIC$'] Civic\n"
 
 	IS_SAPIENT:0 "This Species is Sapient"
 # MISC replaces
