--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -3,8 +3,9 @@
  tec_has_empire_last_activated_cult: "Has last activated Empire Ideology Tenet:"
  tec_has_empire_last_deactivated_cult: "Has last deactivated Empire Ideology Tenet:"
  tec_has_cult_points_available: "Has Enough Points for Tenet: "
- tec_cui_has_pending_cult_decision_no: "£trigger_no£ Has Pending Cult Decision"
- tec_cui_has_pending_cult_decision_yes: "£trigger_yes£ Has Pending Cult Decision"
+ tec_cui_has_pending_cult_decision: "Has Pending Cult Decision"
+ tec_cui_has_pending_cult_decision_no: "£trigger_no£ $tec_cui_has_pending_cult_decision$"
+ tec_cui_has_pending_cult_decision_yes: "£trigger_yes£ $tec_cui_has_pending_cult_decision$"
  tec_activate_cult_effect: "Activated Ideology Tenet:"
  tec_deactivate_cult_effect: "Deactivated Ideology Tenet:"
  tec_cui_cult_header: "Ideology Tenets"
@@ -21,8 +22,9 @@
  tec_cui_cult_title_deactivate_cult: "Deactivate Tenet?"
  tec_cui_cult_title_deactivate_cult_desc: "Are you sure you want to deactivate the ['tradition:[from.tec_cult_in_queue_key]', [tec_cult_in_queue_name]] Tenet?"
  tec_cui_cult_invalid: "Invalid"
- tec_cui_has_no_authority_swap_no: "£trigger_no£ Has no Advanced Authority Swaps"
- tec_cui_has_no_authority_swap_yes: "£trigger_yes£ Has no Advanced Authority Swaps"
+ tec_cui_has_no_authority_swap: "Has no Advanced Authority Swaps"
+ tec_cui_has_no_authority_swap_no: "£trigger_no£ $tec_cui_has_no_authority_swap$"
+ tec_cui_has_no_authority_swap_yes: "£trigger_yes£ $tec_cui_has_no_authority_swap$"
 
  tec_cui_cult_faction_demand_liked_desc: "Having the §Y$CULT$§! Tenet pleases the [Root.GetName]"
  tec_cui_cult_faction_demand_disliked_desc: "Having the §Y$CULT$§! Tenet displeases the [Root.GetName]"
