--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -135,20 +135,17 @@
 	edict_tec_doing_your_part_desc: "In times of war, every citizen must contribute to our glorious cause. From factory to frontline, we shall unite our efforts and crush our enemies. Victory demands sacrifice - are you doing your part?"
     edict_tec_doing_your_part_effects: "$tec_loc_naval_cap$ from $mod_base_planet_soldiers$: §G+1§!\n$tec_loc_defense_armies$ from $mod_base_planet_soldiers$: §G+1§!\n\n§RCan only be enacted during War§!"
 
-	edict_tec_technological_funding: "Technological Funding"
-	edict_tec_technological_funding_desc: "TODO"
-
 	edict_tec_market_funding: "Market Funding"
-	edict_tec_market_funding_desc: "TODO"
+	edict_tec_market_funding_desc: "By allocating additional resources to stimulate market competition and entrepreneurship, we can unlock the full potential of our economy. While this approach may increase short-term costs, the long-term benefits are undeniable."
 
 	edict_tec_nature_bond: "Nature Bond"
-	edict_tec_nature_bond_desc: "TODO"
+	edict_tec_nature_bond_desc: "By nurturing our bond with nature, we ease our reliance on resources while allowing the untamed wilds to flourish under our care."
 
 	edict_tec_industrial_overproduction: "Industrial Overproduction"
-	edict_tec_industrial_overproduction_desc: "TODO"
+	edict_tec_industrial_overproduction_desc: "The heartbeat of our empire echoes in the rhythm of our factories. Pushing our industrial might to its limits, we forge the future with every component and construct. Efficiency is our creed, productivity our legacy. Let the galaxy marvel at what we build."
 
 	edict_tec_elite_boosting: "Elite Boosting"
-	edict_tec_elite_boosting_desc: "TODO"
+	edict_tec_elite_boosting_desc: "The truly gifted shape the destiny of nations. Our empire thrives when we cultivate excellence at its highest echelons. This initiative hones the talents of our natural leaders, pushing the boundaries of what our civilization can achieve under their guidance"
 
 # /
 # Civics/mechanics
