sync - unfinished hive civics

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1532,27 +1532,27 @@ l_english:
 
 		building_tec_chemical_barons_generic_biohive:0 "Chemical Growth"
 		building_tec_chemical_barons_generic_biohive_plural:0 "Chemical Growths"
-		building_tec_chemical_barons_generic_biohive_desc:0 "TO DO"
+		building_tec_chemical_barons_generic_biohive_desc:0 "$todo_new_civics$"
 		building_tec_chemical_barons_generic_biohive_effect:0 "$todo_new_civics$"
 
 		building_tec_chemical_barons_motes_biohive:0 "Volatile Chemo-Tumor"
 		building_tec_chemical_barons_motes_biohive_plural:0 "$building_tec_chemical_barons_motes_biohive$s"
-		building_tec_chemical_barons_motes_biohive_desc:0 "A"
+		building_tec_chemical_barons_motes_biohive_desc:0 "$todo_new_civics$"
 		building_tec_chemical_barons_motes_biohive_effect:0 "$todo_new_civics$"
 
 		building_tec_chemical_barons_crystals_biohive:0 "Cristallized Outgrowth"
 		building_tec_chemical_barons_crystals_biohive_plural:0 "$building_tec_chemical_barons_crystals_biohive$s"
-		building_tec_chemical_barons_crystals_biohive_desc:0 "A."
+		building_tec_chemical_barons_crystals_biohive_desc:0 "$todo_new_civics$"
 		building_tec_chemical_barons_crystals_biohive_effect:0 "$todo_new_civics$"
 
 		building_tec_chemical_barons_gases_biohive:0 "Gaseous Chem-Organ"
 		building_tec_chemical_barons_gases_biohive_plural:0 "$building_tec_chemical_barons_gases_biohive$s"
-		building_tec_chemical_barons_gases_biohive_desc:0 "TO DO."
+		building_tec_chemical_barons_gases_biohive_desc:0 "$todo_new_civics$"
 		building_tec_chemical_barons_gases_biohive_effect:0 "$todo_new_civics$"
 
 		building_tec_chemical_barons_zro_biohive:0 "Dust Chemo-Gland"
 		building_tec_chemical_barons_zro_biohive_plural:0 "$building_tec_chemical_barons_zro_biohive$s"
-		building_tec_chemical_barons_zro_biohive_desc:0 "A."
+		building_tec_chemical_barons_zro_biohive_desc:0 "$todo_new_civics$"
 		building_tec_chemical_barons_zro_biohive_effect:0 "$todo_new_civics$"
 	# /
  # /
@@ -2174,6 +2174,14 @@ l_english:
 	building_tec_biohive_broodtwister_chambers_desc:0 "$todo_hive_civics$"
 	building_tec_biohive_broodtwister_chambers_effect:0 "$todo_hive_civics$"
 
+	pop_modifier_tec_broodtwisted_stage_bad:0 "Broodtwisted Devolution"
+	pop_modifier_tec_broodtwisted_stage_bad_desc:0 "The genetics of this pop have been twisted with unreliable results."
+	pop_modifier_tec_broodtwisted_stage_1:0 "Broodtwisted Improvement"
+	pop_modifier_tec_broodtwisted_stage_1_desc:0 "The genetics of this pop have been twisted with positive results."
+	pop_modifier_tec_broodtwisted_stage_2:0 "Broodtwisted Mutation"
+	pop_modifier_tec_broodtwisted_stage_2_desc:0 "$pop_modifier_tec_broodtwisted_stage_1_desc$"
+	pop_modifier_tec_broodtwisted_stage_3:0 "Broodtwisted Evolution"
+	pop_modifier_tec_broodtwisted_stage_3_desc:0 "$pop_modifier_tec_broodtwisted_stage_1_desc$"
  # /
  # ------------------------------------------------- Mutagenic
 	job_tec_swarmlord_drone:0 "Swarmlord Drone"
